[gd_scene load_steps=5 format=3 uid="uid://bolaoptqar2l"]

[ext_resource type="Script" uid="uid://cuc3kp1pyvcoe" path="res://Scenes/rotating_static_map.gd" id="1_lug42"]
[ext_resource type="PackedScene" uid="uid://c5u70u3dxjw4c" path="res://Scenes/StaticClickableMap.tscn" id="2_static"]
[ext_resource type="Shader" uid="uid://bh8ss517uitxx" path="res://Shaders/circular_mask.gdshader" id="3_shader"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_globe"]
shader = ExtResource("3_shader")
shader_parameter/radius = 0.48
shader_parameter/center = Vector2(0.5, 0.5)
shader_parameter/edge_softness = 0.01
shader_parameter/distortion = 0.85
shader_parameter/rim_darkening = 0.2
shader_parameter/rim_softness = 0.1
shader_parameter/tex_aspect = 1.0

[node name="RotatingStaticMap" type="Node2D"]
script = ExtResource("1_lug42")
scroll_speed = 150.0

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(1024, 1024)
render_target_update_mode = 4

[node name="Ocean" type="ColorRect" parent="SubViewport"]
offset_right = 1024.0
offset_bottom = 1024.0
color = Color(0.2, 0.4, 0.8, 1)

[node name="WorldScroller" type="Node2D" parent="SubViewport"]

[node name="StaticClickableMap" parent="SubViewport/WorldScroller" instance=ExtResource("2_static")]

[node name="GlobeDisplay" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_globe")
offset_left = 400.0
offset_top = 100.0
offset_right = 1424.0
offset_bottom = 1124.0
expand_mode = 1
stretch_mode = 0
